# celeritas

./: Makefile  Makefile.in  celeritas.py  config.h  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
celeritas/: config.py  gl.py  glrender.py  info.py  opengl.py  uio.py  windows.py
cplusplus_is_awkward/: Makefile.am  README.md  celeritas.cpp  config.status  libtool
cplusplus_is_awkward/src/: Makefile.in
src/: Makefile  Makefile.am  celeritas.h
