AC_INIT([celeritas], [0.0.1], [fabio@vuole.me])
	AC_CONFIG_SRCDIR([src])
	AC_CONFIG_HEADER(config.h)
	AC_CONFIG_MACRO_DIR([m4])
	AM_INIT_AUTOMAKE([-Wall -Werror foreign])

	AC_LANG_CPLUSPLUS
	AC_PROG_CXX
	AM_PROG_LIBTOOL

	#PKG_CHECK_MODULES(BOOST, [boost >= 1.5])
	#AC_SUBST(BOOST_CFLAGS)
	#AC_SUBST(BOOST_LIBS)

	PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
	AC_SUBST(OGRE_CFLAGS)
	AC_SUBST(OGRE_LIBS)

	PKG_CHECK_MODULES(SDL2, [sdl2 >= 2.0])
	AC_SUBST(SDL_CFLAGS)
	AC_SUBST(SDL_LIBS)


	#PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
	#AC_SUBST(OIS_CFLAGS)
	#AC_SUBST(OIS_LIBS)

	AC_CONFIG_FILES([
		Makefile
		src/Makefile
	])
	AC_OUTPUT
